# uwb-localization

./: README.md
common_msgs/: CMakeLists.txt  package.xml
common_msgs/msg/: GPSVelocity.msg  MaxDynamics.msg  MeasurementPosVel.msg  MeasurementPosition.msg  MeasurementVelocity.msg  Mission.msg  MissionStatus.msg  NavigationState.msg  PathPlanningStatus.msg  PixhawkCMD.msg  PixhawkServo.msg  Reference.msg  UWB_DataInfo.msg  UWB_EchoedRangeInfo.msg  UWB_FullNeighborDatabase.msg  UWB_FullNeighborDatabaseEntry.msg  UWB_FullRangeInfo.msg  UWB_SendData.msg  Waypoint.msg
slam_pp/: CMakeLists.txt  package.xml
slam_pp/include/: basic_function.hpp
slam_pp/include/mapping/: mapping_abstract.hpp  thread_mapping.hpp
slam_pp/include/pp/: pp_abstract.hpp  simple_planner.hpp  thread_pp.hpp
slam_pp/include/slam/: anchor_triangulation_error_term.hpp  slam_abstract.hpp  thread_slam.hpp  uwb_loc_init.hpp  uwb_localization.hpp  uwb_node.hpp
slam_pp/launch/: mapping.yaml  pp.yaml  slam.yaml  slam_pp.launch
slam_pp/src/: basic_function.cpp  slam_pp_node.cpp
slam_pp/src/mapping/: mapping_abstract.cpp  thread_mapping.cpp
slam_pp/src/pp/: pp_abstract.cpp  simple_planner.cpp  thread_pp.cpp
slam_pp/src/slam/: slam_abstract.cpp  thread_slam.cpp  uwb_loc_init.cpp  uwb_localization.cpp  uwb_node.cpp
time_domain/: CMakeLists.txt  package.xml
time_domain/launch/: time_domain.launch  time_domain.yaml
time_domain/scripts/: general_TDMA.py  generate_TDMA_slotmap.py
time_domain/scripts/10_UAV/csv/: 101.csv  102.csv  103.csv  104.csv  105.csv  106.csv  301.csv  302.csv  303.csv  304.csv  305.csv  306.csv  307.csv  308.csv  309.csv  310.csv
time_domain/scripts/10_UAV/csv_B/: 101.csv  102.csv  103.csv  104.csv  105.csv  106.csv  301.csv  302.csv  303.csv  304.csv  305.csv  306.csv  307.csv  308.csv  309.csv  310.csv
time_domain/scripts/10_UAV/txt/: 101.txt  102.txt  103.txt  104.txt  105.txt  106.txt  301.txt  302.txt  303.txt  304.txt  305.txt  306.txt  307.txt  308.txt  309.txt  310.txt
time_domain/scripts/10_UAV/txt_B/: 101.txt  102.txt  103.txt  104.txt  105.txt  106.txt  301.txt  302.txt  303.txt  304.txt  305.txt  306.txt  307.txt  308.txt  309.txt  310.txt
time_domain/scripts/6_UAV/csv/: 101.csv  103.csv  104.csv  106.csv  303.csv
time_domain/scripts/6_UAV/txt/: 100.txt  101.txt  102.txt  103.txt  105.txt  106.txt  300.txt  304.txt  306.txt
time_domain/scripts/csv/: 100.csv  102.csv  105.csv  300.csv  301.csv  302.csv  304.csv  305.csv  306.csv
time_domain/scripts/csv_B/: 101.csv  102.csv  103.csv  104.csv  105.csv  106.csv  301.csv  302.csv  303.csv  304.csv  305.csv  306.csv
time_domain/scripts/txt/: 104.txt  301.txt  302.txt  303.txt  305.txt
time_domain/scripts/txt_B/: 101.txt  102.txt  103.txt  104.txt  105.txt  106.txt  301.txt  302.txt  303.txt  304.txt  305.txt  306.txt
time_domain/src/: basic_functions.cpp  basic_functions.hpp  time_domain_interface.cpp  time_domain_interface.hpp  time_domain_node.cpp
time_domain/src/lib/: helper.c  helper.h  hostInterfaceCommon.h  hostInterfaceRCM.h  hostInterfaceRN.h  rcm.c  rcm.h  rcmIf.c  rcmIf.h  rn.c  rn.h
uwb_calibration/: CMakeLists.txt  package.xml
uwb_calibration/launch/: uwb_calibration.launch  uwb_calibration.yaml
uwb_calibration/src/: anchor_calibration.cpp  anchor_calibration.hpp  basic_functions.cpp  basic_functions.hpp  coordinate_error_term.hpp  point_line_distance_error_term.hpp  triangulation_error_term.hpp  uwb_calibration_node.cpp  uwb_node.cpp  uwb_node.hpp
